Bug 384314 - ledger sort option does not work properly
Summary: ledger sort option does not work properly
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-03 14:22 UTC by n.cartiaux
Modified: 2019-09-24 20:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5, 5.0.0
Sentry Crash Report:


Attachments
screen capture with bug effect (46.20 KB, image/png)
2017-09-03 14:22 UTC, n.cartiaux
Details

Note You need to log in before you can comment on or make changes to this bug.
Description n.cartiaux 2017-09-03 14:22:25 UTC
Created attachment 107664 [details]
screen capture with bug effect

Hi,

When I change In 'Ledgers' view the sort options to 'reconcile state' at first choice, the positive transactions are not sorted the same way the negative ones.

i.e. negative transactions are in the good area depending their status (no status, cleared, reconciled) 
but positive transactions with no status are in cleared area,
positive transactions with cleared status are in reconciled area.

PS I had the same issue since years on Linux mint 17 or Xubuntu with kmymoney 4.6 versions

see screen capture as attachment
Comment 1 Thomas Baumgart 2017-09-14 09:03:46 UTC
Git commit c0ad878fd320ce62d103cdc873a582c806b9fd8d by Thomas Baumgart.
Committed on 13/09/2017 at 20:51.
Pushed by tbaumgart into branch 'master'.

Fix reverse sort order handling in register
FIXED-IN: 5.0

M  +12   -6    kmymoney/widgets/register.cpp

https://commits.kde.org/kmymoney/c0ad878fd320ce62d103cdc873a582c806b9fd8d
Comment 2 Ralf Habacker 2019-08-24 01:32:54 UTC
Git commit 0ae5377fda351c3d71337bd09d5acfc99dcdb67b by Ralf Habacker.
Committed on 24/08/2019 at 01:30.
Pushed by habacker into branch '4.8'.

Fix reverse sort order handling in register
FIXED-IN: 4.8.5, 5.0.0

(cherry picked from commit c0ad878fd320ce62d103cdc873a582c806b9fd8d)

Conflicts:
	kmymoney/widgets/register.cpp

M  +12   -6    kmymoney/widgets/register.cpp

https://commits.kde.org/kmymoney/0ae5377fda351c3d71337bd09d5acfc99dcdb67b
Comment 3 Ralf Habacker 2019-09-24 20:32:46 UTC
Git commit c0d3df01823db7fe0a6107a84fa7c3d3008a8d1d by Ralf Habacker.
Committed on 24/09/2019 at 20:32.
Pushed by habacker into branch '4.8'.

Correct direction display of symbols in column sort dialog of ledger view

M  +2    -2    kmymoney/widgets/transactionsortoptionimpl.cpp

https://commits.kde.org/kmymoney/c0d3df01823db7fe0a6107a84fa7c3d3008a8d1d