Fix reverse sort order handling in register

BUG: 384314
FIXED-IN: 5.0